[project]
name = "api-com-flask"
version = "0.1.0"
description = ""
authors = [
    {name = "Anderson Mariano",email = "andersonmariano801@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask (>=3.1.3,<4.0.0)",
    "flask-sqlalchemy (>=3.1.1,<4.0.0)",
    "flask-migrate (>=4.1.0,<5.0.0)",
    "flask-jwt-extended (>=4.7.1,<5.0.0); python_version >= \"3.11\" and python_version < \"4\"",
    "pytest (>=9.0.3,<10.0.0)",
    "pytest-mock (>=3.15.1,<4.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "gunicorn (>=25.3.0,<26.0.0)"
]

# pytest.toml or .pytest.toml
[pytest]
addopts = "-vv -rA"
testpaths = ["tests"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
